--- a/NAPS2.Core/packages.config
+++ b/NAPS2.Core/packages.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.1" targetFramework="net45" />
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net48" />
   <package id="Ghostscript.NET" version="1.2.3" targetFramework="net45" />
-  <package id="MailKit" version="2.15.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="MailKit" version="2.8.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
-  <package id="MimeKit" version="2.15.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="Moq" version="4.17.2" targetFramework="net451" />
+  <package id="MimeKit" version="2.9.2" targetFramework="net48" />
+  <package id="Moq" version="4.15.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net45" />
   <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net45" />
   <package id="SharpZipLib" version="1.3.3" targetFramework="net451" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net45" requireReinstallation="true" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="ZXing.Net" version="0.16.8" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net48" />
 </packages>
