--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -6266,6 +6266,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\wireless16.png" />
+    <None Include="Resources\folder-directory-files-icon_add.png" />
+    <None Include="Resources\folder-directory-files-icon.png" />
     <None Include="Resources\export.png" />
     <None Include="Resources\DarkMode.png" />
     <None Include="Resources\barcodePetit.png" />
