--- a/NAPS2.Core/packages.config
+++ b/NAPS2.Core/packages.config
@@ -4,6 +4,8 @@
   <package id="CommandLineParser" version="1.9.71" targetFramework="net48" />
   <package id="CsvHelper" version="30.0.1" targetFramework="net48" />
   <package id="Ghostscript.NET" version="1.2.3" targetFramework="net45" />
+  <package id="Magick.NET.Core" version="13.5.0" targetFramework="net48" />
+  <package id="Magick.NET-Q8-AnyCPU" version="13.5.0" targetFramework="net48" />
   <package id="MailKit" version="2.8.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
